--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,28 +3,8 @@ spring.mvc.view.suffix: .jsp
 #
 spring.http.multipart.max-file-size=2048MB
 spring.http.multipart.max-request-size=2048MB
-#
-#server.port=9090
-#
-#logging.level.root=DEBUG
-##spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-## Database
-#db.url: jdbc:mysql://localhost:3306/travel_app_apiss
-#db.driver-class-name: com.mysql.jdbc.Driver
-#db.username: root
-#db.password: root
-# 
-## Hibernate
-#hibernate.dialect: org.hibernate.dialect.MySQLDialect
-#hibernate.show_sql: true
-#hibernate.hbm2ddl.auto: update
-#entitymanager.packagesToScan: com.kush.travel_api.entities
-#spring.datasource.hikari.connection-test-query=SELECT 1
-#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-
-#Mari--------------------
+spring.mvc.format.date-time=iso
 server.port=9090
-#logging.level.root=TRACE
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/travel_app_apis
 spring.datasource.username=root
@@ -36,3 +16,4 @@ spring.jpa.hibernate.ddl-auto = update
 entitymanager.packagesToScan: com.kush.travel_api.entities
 spring.datasource.hikari.connection-test-query=SELECT 1
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+loggin.level.org.springframework=DEBUG
