--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,5 @@ spring.http.multipart.max-file-size=2048MB
 spring.http.multipart.max-request-size=2048MB
 spring.mvc.format.date-time=iso
 server.port=9090
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/travel_app_apis
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto = update
-entitymanager.packagesToScan: com.kush.travel_api.entities
-spring.datasource.hikari.connection-test-query=SELECT 1
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-loggin.level.org.springframework=DEBUG
+
+spring.profiles.active=${ENV:dev}
