--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://containers-us-west-31.railway.app:7309/railway
 spring.datasource.username=root
 spring.datasource.password=M8vUlK6QrtHKywfNW3ZC
