--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://containers-us-west-31.railway.app:7309/railway
+spring.datasource.url=mysql://containers-us-west-31.railway.app:7309/railway
 spring.datasource.username=root
 spring.datasource.password=M8vUlK6QrtHKywfNW3ZC
 #spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
