--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://containers-us-west-31.railway.app:7309/railway
 spring.datasource.username=root
 spring.datasource.password=M8vUlK6QrtHKywfNW3ZC
-spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto = update
