--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,11 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java 5.1.6 deploy8.0.1 -->
 		<dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
-		    <version>8.0.33</version>
+		    <version>5.1.6</version>
 		    <scope>runtime</scope>
 		</dependency>
 		<dependency>
